# small_IPC_shared_memory

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
main/: entryPoint.cpp  receiver.cpp  sender.cpp  subprocess.h  utility.h
shmlib/: CMakeLists.txt
shmlib/include/: buffer.h  notifier.h  sharedMemory.h
shmlib/src/: buffer.cpp  notifier.cpp  sharedMemory.cpp
src/: Buffer.cpp  Buffer.h  InterProccessNotifier.cpp  InterProccessNotifier.h  SharedMemory.cpp  SharedMemory.h  Utility.cpp  Utility.h  entryPoint.cpp  m1.cpp  m2.cpp  notifier.h  rawbuff1.cpp  rawbuff2.cpp  subprocess.cpp  subprocess.h
supervisor/: CMakeLists.txt
supervisor/include/: utility.h
supervisor/src/: entryPoint.cpp  receiver.cpp  sender.cpp
tests/: CMakeLists.txt  testNotifier.cpp  testbuffer.cpp
